css/scss/module/_c-.main.scss
$module-name: 'main';

.#{$module-name} {
    position: relative;
        z-index: 200;
    padding: 60px;
    box-sizing: border-box;
    @extend %transition-transform;
    // Dinamic width >>>
    &[data-leftSidebar="active"] {
        width: calc(100% - 120px);
        transform: translate3d(120px, 120px, 0);
    }

    &[data-leftSidebar="inactive"] {
        transform: translate3d(0, 120px, 0);
    }

    &[data-rightSidebar="active"] {
        width: calc(100% - 230px);
        transform: translate3d(230px, 120px, 0);
    }

    &[data-rightSidebar="inactive"] {
        transform: translate3d(120px, 120px, 0);
    }

    &[data-leftSidebar="active"][data-rightSidebar="active"] {
        width: calc(100% - 350px);
        transform: translate3d(350px, 120px, 0);
    }
    &[data-leftSidebar="inactive"][data-rightSidebar="inactive"] {
        width: 100%;
        transform: translate3d(0, 120px, 0);
    }

    /***************************************/
    .main__header {
        justify-content: space-between;
    }
    .main__addNew-and-selectAll {
        .btn-group {
            position: relative;
        }
    }

    // Filtros styles
    .main__filters {
        width: 100%;
        padding: 20px 0px;
        border-bottom: 1px solid #8F8F8F;
        .main__filters__container {
            justify-content: space-between;
        }

        .main__filters__pages {
            .spanItems {
                @extend %default-margin;
                // Tipografia
                @include type-1(12.16);
                @extend %color-light-default-2;
                @extend %font-weight400;
            }
        }
    }
}

